#counter prj\create counter runing timer

--- a/Roocket/2-counter/counter.html
+++ b/Roocket/2-counter/counter.html
@@ -88,7 +88,7 @@
             <button id="start-counter">شروع</button>
         </div>
         <div id="error-message"></div>
-        <div class="c100 p50">
+        <div class="c100">
             <span>250</span>
             <div class="slice">
                 <div class="bar"></div>
