--- a/Roocket/4-JS Piano/JS Piano.html
+++ b/Roocket/4-JS Piano/JS Piano.html
@@ -17,63 +17,62 @@
         <section id="main">
             <div class="nowplaying"></div>
             <div class="keys">
-                <div class="key">
+                <div data-key="65" class="key" data-note="C">
                     <span class="hints">A</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="87" class="key sharp" data-note="C#">
                     <span class="hints">W</span>
                 </div>
-                <div class="key">
+                <div data-key="83" class="key" data-note="D">
                     <span class="hints">S</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="69" class="key sharp" data-note="D#">
                     <span class="hints">E</span>
                 </div>
-                <div class="key">
+                <div data-key="68" class="key" data-note="E">
                     <span class="hints">D</span>
                 </div>
-                <div class="key">
+                <div data-key="70" class="key" data-note="F">
                     <span class="hints">F</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="84" class="key sharp" data-note="F#">
                     <span class="hints">T</span>
                 </div>
-                <div class="key">
+                <div data-key="71" class="key" data-note="G">
                     <span class="hints">G</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="89" class="key sharp" data-note="G#">
                     <span class="hints">Y</span>
                 </div>
-                <div class="key">
+                <div data-key="72" class="key" data-note="A">
                     <span class="hints">H</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="85" class="key sharp" data-note="A#">
                     <span class="hints">U</span>
                 </div>
-                <div class="key">
+                <div data-key="74" class="key" data-note="B">
                     <span class="hints">J</span>
                 </div>
-                <div class="key">
+                <div data-key="75" class="key" data-note="C">
                     <span class="hints">K</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="79" class="key sharp" data-note="C#">
                     <span class="hints">O</span>
                 </div>
-                <div class="key">
+                <div data-key="76" class="key" data-note="D">
                     <span class="hints">L</span>
                 </div>
-                <div class="key sharp">
+                <div data-key="80" class="key sharp" data-note="D#">
                     <span class="hints">P</span>
                 </div>
-                <div class="key sharp">
-                    <span class="hints">P</span>
-                </div>
-                <div class="key">
+                <div data-key="186" class="key" data-note="E">
                     <span class="hints">;</span>
                 </div>
             </div>
         </section>
     </section>
 </body>
+
+<script src="JS Piano.js"></script>
 
 </html>
