#drag and drop prj\create draggable class

--- a/Roocket/6-drag and drop/drag and drop.html
+++ b/Roocket/6-drag and drop/drag and drop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>drag and drop</title>
     <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v20.1.0/dist/font-face.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="./drag and drop.css.css">
+    <link rel="stylesheet" href="./drag and drop.css">
 </head>
 
 <body>
