--- a/Roocket/7-tab navigation/tab navigation.html
+++ b/Roocket/7-tab navigation/tab navigation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v[22.1.0]/dist/font-face.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v[22.1.0]/dist/font-face.css" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="tab navigation.css">
     <title>tab navigation</title>
@@ -18,16 +18,16 @@
     <div class="cd-tabs ">
         <nav>
             <ul class="cd-tabs-navigation">
-                <li data-content="index"><a href="#">صفحه اصلی</a></li>
-                <li data-content="courses"><a href="#">دوره ها</a></li>
-                <li data-content="articles"><a href="#">مقالات</a></li>
-                <li data-content="discuss"><a href="#">بحث و گفتگو</a></li>
-                <li data-content="podcast"><a href="#">راکت کست</a></li>
+                <li><a data-content="index" href="#" class="selected">صفحه اصلی</a></li>
+                <li><a data-content="courses" href="#">دوره ها</a></li>
+                <li><a data-content="articles" href="#">مقالات</a></li>
+                <li><a data-content="discuss" href="#">بحث و گفتگو</a></li>
+                <li><a data-content="podcast" href="#">راکت کست</a></li>
             </ul>
         </nav>
 
         <ul class="cd-tabs-content">
-            <li data-content="index">
+            <li data-content="index" class="selected">
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
                     کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این
                     صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
