#slidershow prj/create "class slider" & set intialStuff

--- a/Roocket/8-slidershow/slidershow.html
+++ b/Roocket/8-slidershow/slidershow.html
@@ -32,6 +32,9 @@
             <div class="text ">متن اسلاید سوم</div>
         </div>
     </div>
+
+    <script src="slider.js"></script>
+    <script src="slidershow.js"></script>
 </body>
 
 </html>
