--- a/Roocket/8-slidershow/slidershow.html
+++ b/Roocket/8-slidershow/slidershow.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="sliders" id="sliders">
-        <div class="slider">
+        <div class="slider active">
             <div class="numbertext">1 / 3</div>
             <img src="https://roocket.ir/public/image/2017/8/9/react-native.png" width="100%">
             <div class="text">متن اسلاید اول</div>
