#slidershow prj/set and reset Interval & final prj

--- a/Roocket/8-slidershow/slidershow.html
+++ b/Roocket/8-slidershow/slidershow.html
@@ -33,6 +33,26 @@
         </div>
     </div>
 
+    <hr>
+
+    <div class="sliders" id="sliders2">
+        <div class="slider active">
+            <div class="numbertext">1 / 3</div>
+            <img src="https://roocket.ir/public/image/2017/8/9/react-native.png" width="100%">
+            <div class="text">متن اسلاید اول</div>
+        </div>
+        <div class="slider">
+            <div class="numbertext">2 / 3</div>
+            <img src="https://roocket.ir/public/image/2019/2/9/laravelgraphql.png" width="100% ">
+            <div class="text ">متن اسلاید دوم</div>
+        </div>
+        <div class="slider ">
+            <div class="numbertext ">3 / 3</div>
+            <img src="https://roocket.ir/public/images/2019/8/19/js-2.png" width="100% ">
+            <div class="text ">متن اسلاید سوم</div>
+        </div>
+    </div>
+
     <script src="slider.js"></script>
     <script src="slidershow.js"></script>
 </body>
