--- a/Monster course js/1-notepad/index.html
+++ b/Monster course js/1-notepad/index.html
@@ -23,7 +23,7 @@
                     <div class="form">
                         <form action="#">
                             <label for="textarea">یادداشت جدید بنویس:</label>
-                            <textarea name="notepad" id="textarea" cols="30" rows="3"></textarea>
+                            <textarea tabindex="0" name="notepad" id="textarea" cols="30" rows="3"></textarea>
                             <button type="submit" id="btn_save" class="btn_save">ذخیره یادداشت</button>
                         </form>
                     </div>
