--- a/Monster course js/2-notpad personality/index.html
+++ b/Monster course js/2-notpad personality/index.html
@@ -32,6 +32,8 @@
                             <label for="textarea" class="lead">یادداشت مورد نظر را بنویسید:</label>
                             <textarea class="w-100 p-3" placeholder="لطفا یادداشت مورد نظر را در یانجا بنویسید..!" tabindex="0" name="textarea" id="textarea" cols="30" rows="5"></textarea>
                             <button type="submit" class="btn btn-primary w-100 p-2" id="save_note">ذخیره کردن یادداشت</button>
+                            <div id="sucess_message" class="sucess alert alert-success mt-2 frist_time_hide" role="alert">یادداشت شما با موفقیت <strong class="text-success">ثبت</strong> گردید.</div>
+                            <div id="danger_message" class="danger alert alert-danger mt-2 frist_time_hide" role="alert">یادداشت شما با موفقیت <strong class="text-danger">حذف</strong> گردید.</div>
                         </form>
                     </div>
                     <div class="col-sm-12 col-md-6">
